<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogRateMainLayout"

    android:background="@color/fragmentBgColor"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/rate_dialog_icon"

        app:layout_constraintTop_toBottomOf="@id/crossButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/crossButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/cross_icon"

        android:padding="@dimen/_4sdp"
        android:tint="@color/black"

        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rateUsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/wouldYouLikeApp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rateUsMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/rateMessage"
        android:textColor="@color/unselectedThumbColor"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/poppins_regular"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_6sdp"

        android:layout_marginHorizontal="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/rateUsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.willy.ratingbar.ScaleRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srb_numStars="5"
        app:srb_minimumStars="1"
        app:srb_rating="5"
        app:srb_starWidth="@dimen/_30sdp"
        app:srb_starHeight="@dimen/_30sdp"
        app:srb_starPadding="@dimen/_8sdp"
        app:srb_stepSize="1.0"

        app:srb_isIndicator="false"
        app:srb_clickable="true"
        app:srb_scrollable="true"
        app:srb_clearRatingEnabled="false"

        app:srb_drawableEmpty="@drawable/rate_dialog_unselected_star"
        app:srb_drawableFilled="@drawable/selected_fav_icon"

        app:layout_constraintTop_toBottomOf="@id/rateUsMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </com.willy.ratingbar.ScaleRatingBar>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/feedBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/mainBackGroundColorGreen"

        android:text="@string/rateUs"
        android:textColor="@color/whiteColorForBothThemes"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="0"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_15sdp"


        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintBottom_toTopOf="@id/exitText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <com.google.android.material.textview.MaterialTextView
       android:id="@+id/exitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/exitApp"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"

        android:paddingVertical="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@id/feedBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>