<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corners"

    android:paddingVertical="@dimen/_15sdp"
    android:backgroundTint="@color/fragmentBgColor"


    >
    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/ad_Linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <include
            android:id="@+id/shimmerLayout"
            layout="@layout/shimmer_small_native_two"
            android:visibility="visible"
            />


        <FrameLayout
            android:id="@+id/adContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:visibility="gone"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cameraPermissionMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteEntireMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/poppins_regular"

        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"

        app:layout_constraintTop_toBottomOf="@id/ad_Linear_Layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/capitalCancel"
        android:textColor="@color/scrollBarThumbColor"
        android:textSize="@dimen/_13ssp"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/poppins_medium"

        android:padding="@dimen/_3sdp"
        android:gravity="end"

        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"

        app:layout_constraintTop_toBottomOf="@id/cameraPermissionMessage"
        app:layout_constraintEnd_toStartOf="@id/ok"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitalOk"
        android:textColor="@color/scrollBarThumbColor"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/_3sdp"

        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_10sdp"

        app:layout_constraintTop_toBottomOf="@id/cameraPermissionMessage"

        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>