<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainDialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@color/mainBackGroundColorGreen"




    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/mainDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_15sdp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/whiteColorForBothThemes"

        android:layout_marginHorizontal="@dimen/_10sdp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/freeVersionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="@dimen/_15sdp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/freeVersionRadio"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"

                android:src="@drawable/on_radio_button"
                android:tint="@color/tabSelecterColor"

                android:padding="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="@id/freeVersionText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/freeVersionText"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/freeVersionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/freeVersion"
                android:textColor="@color/blackColorForBothThemes"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/poppins_medium"

                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"


                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/freeVersionRadio"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/proVersionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/freeVersionTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/proVersionIcon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"

                android:src="@drawable/off_radio_button"
                android:tint="@color/tabSelecterColor"

                android:padding="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="@id/proVersionText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/proVersionText"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/proVersionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/proVersion"
                android:textColor="@color/blackColorForBothThemes"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/poppins_medium"

                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"


                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/proVersionIcon"
                app:layout_constraintBottom_toTopOf="@id/noAdvertisingText"
                />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noAdvertisingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/noAdvertising"
                android:textColor="@color/unselectedThumbColor"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/poppins_regular"

                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"

                android:layout_marginTop="@dimen/_8sdp"

                app:layout_constraintTop_toBottomOf="@id/proVersionText"
                app:layout_constraintStart_toStartOf="@id/proVersionText"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/advancedFeatureText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/advancedFeatures"
                android:textColor="@color/unselectedThumbColor"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/poppins_regular"

                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"

                android:layout_marginTop="@dimen/_5sdp"

                app:layout_constraintTop_toBottomOf="@id/noAdvertisingText"
                app:layout_constraintStart_toStartOf="@id/proVersionText"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/paymentText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/oneTimePaymentOf"
                android:textColor="@color/unselectedThumbColor"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/poppins_regular"

                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"

                android:layout_marginTop="@dimen/_5sdp"

                app:layout_constraintTop_toBottomOf="@id/advancedFeatureText"
                app:layout_constraintStart_toStartOf="@id/proVersionText"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/learnMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/learnMore"

                android:textColor="@color/unselectedThumbColor"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/poppins_regular"

                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"



                android:layout_marginTop="@dimen/_5sdp"

                app:layout_constraintTop_toBottomOf="@id/paymentText"
                app:layout_constraintStart_toStartOf="@id/proVersionText"
                app:layout_constraintEnd_toEndOf="parent"

                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>